--- a/assets/dev/scss/editor/navigator/navigator.scss
+++ b/assets/dev/scss/editor/navigator/navigator.scss
@@ -149,6 +149,10 @@ body {
 
 	&__element {
 
+		&[data-locked="true"] > .elementor-navigator__item {
+			cursor: not-allowed;
+		}
+
 		&.elementor-dragging-on-child {
 
 			> .elementor-navigator__elements {
