--- a/modules/tabs-v2/assets/scss/frontend.scss
+++ b/modules/tabs-v2/assets/scss/frontend.scss
@@ -17,8 +17,8 @@
 	--tabs-v2-tabs-wrapper-width: initial;
 
 	--tabs-v2-height: initial;
-	--tabs-v2-overflow-x: hidden;
-	--tabs-v2-overflow-y: auto;
+	--tabs-v2-overflow-x: initial;
+	--tabs-v2-overflow-y: initial;
 
 	--tabs-v2-border-width: 1px;
 	--tabs-v2-border-color: #{$gray-light};
