default border style

--- a/modules/tabs-v2/assets/scss/frontend.scss
+++ b/modules/tabs-v2/assets/scss/frontend.scss
@@ -134,7 +134,8 @@
 	.elementor-tab-title,
 	.elementor-tab-title:before,
 	.elementor-tab-title:after,
-	.e-container {
+	.e-container,
+	.elementor-tabs-content-wrapper {
 		border: 1px none var( --tabs-v2-border-color );
 		border-width: var( --tabs-v2-border-width );
 	}
