--- a/modules/tabs-v2/assets/scss/frontend.scss
+++ b/modules/tabs-v2/assets/scss/frontend.scss
@@ -32,11 +32,12 @@
 	--tabs-v2-title-background-color: #{$editor-background-light};
 	--tabs-v2-title-color-active: #{$white};
 	--tabs-v2-title-background-color-active: var( --e-global-color-accent, var( --tabs-v2-color-accent-fallback ) );
-
-	--tabs-v2-title-alignment: center;
-	--tabs-v2-title-align-items: initial;
 	--tabs-v2-title-width: 100%;
-	--tabs-v2-title-height: initial;
+
+	--tabs-v2-title-justify-content: center;
+	--tabs-v2-title-align-items: center;
+	--tabs-v2-title-direction: row;
+	--tabs-v2-title-grow: 1;
 	--tabs-v2-title-gap: 10px;
 	--tabs-v2-title-padding-top: var( --tabs-v2-default-padding );
 	--tabs-v2-title-padding-right: var( --tabs-v2-default-padding );
@@ -45,18 +46,11 @@
 	--tabs-v2-title-border-radius: initial;
 	--tabs-v2-title-transition: 0.3s;
 
-	--tabs-v2-title-typography-font-family: var( --e-global-typography-accent-font-family, var( --e-global-typography-primary-font-family ) ), Sans-serif;
-	--tabs-v2-title-typography-font-size: initial;
-	--tabs-v2-title-typography-font-weight: var( --e-global-typography-primary-font-weight );
-	--tabs-v2-title-typography-text-transform: initial;
-	--tabs-v2-title-typography-font-style: initial;
-	--tabs-v2-title-typography-text-decoration: initial;
-	--tabs-v2-title-typography-line-height: initial;
-	--tabs-v2-title-typography-letter-spacing: initial;
-	--tabs-v2-title-typography-word-spacing: initial;
-
 	--tabs-v2-icon-color: var( --e-global-color-secondary, var( --tabs-v2-color-secondary-fallback ) );
+	--tabs-v2-icon-color-hover: var( --tabs-v2-title-color-hover );
 	--tabs-v2-icon-color-active: #{$white};
+	--tabs-v2-icon-size: initial;
+	--tabs-v2-icon-gap: 5px;
 
 	max-width: 100%; /* Fix issue with new created tabs-v2 inside tabs-v2 with overflow */
 
@@ -89,12 +83,15 @@
 		&-title {
 			display: flex;
 			align-items: var( --tabs-v2-title-align-items );
+			flex-direction: var( --tabs-v2-title-direction );
+			justify-content: var( --tabs-v2-title-justify-content );
+			gap: var( --tabs-v2-icon-gap );
 			color: var( --tabs-v2-title-color );
 			background-color: var( --tabs-v2-title-background-color );
 			border-width: var( --tabs-v2-border-width );
 			position: relative;
 			cursor: pointer;
-			outline: var( --focus-outline, none );
+			outline: none;
 			padding-top: var( --tabs-v2-title-padding-top );
 			padding-right: var( --tabs-v2-title-padding-right );
 			padding-bottom: var( --tabs-v2-title-padding-bottom ); 
@@ -114,18 +111,53 @@
 				transition: all var( --tabs-v2-title-transition );
 			}
 
-			.elementor-tab-icon {
-				display: unset;
-	
-				>i {
-					width: 20px;
+			&:hover {
+
+				.elementor-tab-icon {
+
+					> i {
+						color: var( --tabs-v2-icon-color-hover );
+					}
+
+					svg {
+						fill: var( --tabs-v2-icon-color-hover );
+					}
 				}
-	
+			}
+
+			.elementor-tab-icon {
+				display: flex;
+
+				> i {
+					color: var( --tabs-v2-icon-color );
+				}
+
+				svg {
+					fill: var( --tabs-v2-icon-color );
+				}
+
+				&,
+				&-active {
+
+					> i {
+						font-size: var( --tabs-v2-icon-size );
+					}
+
+					svg {
+						width: var( --tabs-v2-icon-size );
+						height: var( --tabs-v2-icon-size );
+					}
+				}
+
 				&-active {
 					display: none;
-	
-					>i {
-						width: 20px;
+
+					> i {
+						color: var( --tabs-v2-icon-color-active );
+					}
+
+					svg {
+						fill: var( --tabs-v2-icon-color-active );
 					}
 				}
 			}
@@ -136,9 +168,9 @@
 
 				.elementor-tab-icon {
 					display: none;
-	
+
 					&-active {
-						display: unset;
+						display: flex;
 					}
 				}
 			}
