container inside spacing empty view

--- a/assets/dev/scss/frontend/_container.scss
+++ b/assets/dev/scss/frontend/_container.scss
@@ -1,5 +1,9 @@
 .e-container {
 	// Set to initial values in order to avoid inheritance which might cause unexpected behavior.
+	--container-default-padding-top: 10px;
+	--container-default-padding-right: 10px;
+	--container-default-padding-bottom: 10px;
+	--container-default-padding-left: 10px;
 	--border-radius: 0;
 	--display: flex;
 	--flex-direction: column;
@@ -18,10 +22,10 @@
 	--margin-right: 0;
 	--margin-bottom: 0;
 	--margin-left: 0;
-	--padding-top: var( --container-default-padding-top, 10px );
-	--padding-right: var( --container-default-padding-right, 10px );
-	--padding-bottom: var( --container-default-padding-bottom, 10px );
-	--padding-left: var( --container-default-padding-left, 10px );
+	--padding-top: var( --container-default-padding-top );
+	--padding-right: var( --container-default-padding-right );
+	--padding-bottom: var( --container-default-padding-bottom );
+	--padding-left: var( --container-default-padding-left );
 	--position: relative;
 	--z-index: revert;
 	--overflow: visible;
@@ -74,7 +78,10 @@
 		.elementor-first-add {
 			width: auto;
 			height: auto;
-			inset: 10px;
+			top: Min( calc( 10px - var( --container-default-padding-top ) ), 0px );
+			right: Min( calc( 10px - var( --container-default-padding-right ) ), 0px );
+			bottom: Min( calc( 10px - var( --container-default-padding-bottom ) ), 0px );
+			left: Min( calc( 10px - var( --container-default-padding-left ) ), 0px );
 		}
 	}
 
