mobile flex-wrap

--- a/assets/dev/scss/frontend/_container.scss
+++ b/assets/dev/scss/frontend/_container.scss
@@ -252,7 +252,10 @@
 @media ( max-width: $editor-screen-sm-max ) {
 	.e-container {
 		--width: 100%;
-		--flex-wrap: wrap;
+	}
+
+	body .elementor .elementor-element.e-container {
+		--flex-wrap: var( --container-mobile-flex-wrap, nowrap );
 	}
 }
 
