--- a/assets/dev/scss/frontend/widgets/toggle.scss
+++ b/assets/dev/scss/frontend/widgets/toggle.scss
@@ -78,3 +78,11 @@
 		}
 	}
 }
+
+.e-container {
+
+	.elementor-widget-toggle {
+		// Fix - Toggle widget disappears because of the combination 'flex column' and 'align-items: flex-start, flex-end or center' leads to an undefined width inside the flex container (ED-7524).
+		width: 100%;
+	}
+}
