video default width

--- a/assets/dev/scss/frontend/_container.scss
+++ b/assets/dev/scss/frontend/_container.scss
@@ -252,10 +252,7 @@
 @media ( max-width: $editor-screen-sm-max ) {
 	.e-container {
 		--width: 100%;
-	}
-
-	body .elementor .elementor-element.e-container {
-		--flex-wrap: var( --container-mobile-flex-wrap, nowrap );
+		--flex-wrap: wrap;
 	}
 }
 
