--- a/assets/dev/scss/frontend/widgets/video.scss
+++ b/assets/dev/scss/frontend/widgets/video.scss
@@ -50,8 +50,8 @@
 
 .e-container {
 
-	.elementor-widget-video {
+	> .elementor-widget-video {
 		// Fix - Video widget has an undefined height on mobile using 'flex column wrap' inside the flex container (ED-7604).
-		width: 100%;
+		width: var( --container-widget-width, 100% );
 	}
 }
