--- a/assets/dev/scss/frontend/widgets/accordion.scss
+++ b/assets/dev/scss/frontend/widgets/accordion.scss
@@ -91,8 +91,8 @@
 
 .e-container {
 
-	.elementor-widget-accordion {
+	> .elementor-widget-accordion {
 		// Fix - Accordion widget disappears because of the combination 'flex column' and 'align-items: flex-start, flex-end or center' leads to an undefined width inside the flex container (ED-7524).
-		width: 100%;
+		width: var( --container-widget-width, 100% );
 	}
 }
