--- a/assets/dev/scss/frontend/widgets/accordion.scss
+++ b/assets/dev/scss/frontend/widgets/accordion.scss
@@ -92,7 +92,7 @@
 .e-container {
 
 	> .elementor-widget-accordion {
-		// Fix - Accordion widget disappears because of the combination of 'flex column' and 'align-items: flex-start, flex-end or center' leads to an undefined width inside the flex container (ED-7524).
+		// Fix - Accordion widget disappears because the 'flex column' setting causes an undefined width inside the flex container (ED-7524).
 		width: var( --container-widget-width, 100% );
 	}
 }
