--- a/modules/admin-top-bar/assets/scss/admin.scss
+++ b/modules/admin-top-bar/assets/scss/admin.scss
@@ -22,7 +22,7 @@ $top-bar-height: 50px;
 	box-shadow: 0 4px 6px rgba( 0, 0, 0, 0.04 );
 	display: none;
 	width: calc( 100% + var( --wp-nav-width, 0 ) );
-	margin-left: calc( -1 * var( --wp-nav-width, 0 ) );
+	margin-inline-start: calc( -1 * var( --wp-nav-width, 0 ) );
 
 	.e-admin-top-bar {
 		display: flex;
