--- a/assets/dev/scss/frontend/widgets/divider.scss
+++ b/assets/dev/scss/frontend/widgets/divider.scss
@@ -136,3 +136,12 @@
 .rtl .elementor-widget-divider .elementor-divider__text {
 	direction: rtl;
 }
+
+.e-container {
+
+	& > .elementor-widget-divider {
+		// Fix - Divider widget has undefined width and height issues inside the flex container (ED-7722).
+		width: var( --container-widget-width, 100% );
+		flex-grow: 1;
+	}
+}
