--- a/core/app/assets/styles/tokens/_ratio.scss
+++ b/core/app/assets/styles/tokens/_ratio.scss
@@ -1,7 +1,7 @@
 // Ratio
 
 $ratio-portrait: 0.956 * 100%;
-$eps-ratio-16-9: 100% / 16 * 9;
+$eps-ratio-16-9: calc( 100% / 16 ) * 9;
 
 $embed-responsive-aspect-ratios: () !default;
 // stylelint-disable-next-line scss/dollar-variable-default
