--- a/assets/dev/scss/helpers/mixins.scss
+++ b/assets/dev/scss/helpers/mixins.scss
@@ -4,7 +4,7 @@
 
 // Simple PX to REM units converter
 @function pxToRem($size) {
-	@return $size / 16px * 1rem;
+	@return calc( #{$size} / 16 * 1rem );
 }
 
 // Forms > Input Style
@@ -93,7 +93,7 @@
 @mixin checkers-background($checker-size, $color: #ddd) {
 	background-image: linear-gradient(45deg,$color 25%,transparent 0,transparent 75%,$color 0,$color),linear-gradient(45deg,$color 25%,transparent 0,transparent 75%,$color 0,$color);
 	background-size: $checker-size $checker-size;
-	background-position: 0 0,( $checker-size / 2 ) ( $checker-size / 2 );
+	background-position: 0 0,calc( #{$checker-size} / 2 ) calc( #{$checker-size} / 2 );
 }
 
 
