Fix: Container -  RTL container arrow wrong side [ED-7456]

--- a/assets/dev/scss/editor/preview/preview.scss
+++ b/assets/dev/scss/editor/preview/preview.scss
@@ -1078,6 +1078,12 @@ html.elementor-html {
 						fill: $editor-dark;
 					}
 				}
+
+				&[data-preset="r100"] {
+					@if 'rtl' == $direction {
+						transform: scaleX(-1);
+					}
+				}
 			}
 		}
 	}
