--- a/assets/dev/scss/admin/_experiments.scss
+++ b/assets/dev/scss/admin/_experiments.scss
@@ -28,10 +28,11 @@
 		&__tag {
 			background: $wp-primary;
 			color: $white;
-			padding: 2px 5px;
+			font-size: 0.8em;
+			padding: 3px 6px;
+			line-height: 1;
 			border-radius: 3px;
-			font-size: 0.9em;
-			font-weight: bold;
+			font-weight: 600;
 			margin-top: 5px;
 			@include margin-start(24px);
 		}
@@ -42,7 +43,7 @@
 	}
 
 	&__status {
-		font-size: 13px;
+		font-size: 0.9em;
 		font-weight: bold;
 		font-style: italic;
 	}
@@ -62,6 +63,7 @@
 		}
 
 		.description {
+			font-size: 0.9em;
 			margin: 10px 0;
 			max-width: 820px;
 		}
