--- a/assets/dev/scss/frontend/widgets/spacer.scss
+++ b/assets/dev/scss/frontend/widgets/spacer.scss
@@ -1,5 +1,6 @@
 .elementor-widget-spacer {
     --spacer-size: 50px;
+	--container-widget-width: 100%;
 }
 
 .elementor-column {
@@ -15,13 +16,12 @@
 .e-container {
 
 	& > .elementor-widget-spacer {
-		// Fix - Spacer widget has undefined width and height issues inside the flex container (ED-7720).
 		width: var( --container-widget-width, var( --spacer-size ) );
+		align-self: stretch;
 		flex-shrink: 0;
 
 		& > .elementor-widget-container {
 			height: 100%;
-			align-self: stretch;
 
 			& > .elementor-spacer {
 			
