remove max width for nested elements

--- a/assets/dev/scss/frontend/_container.scss
+++ b/assets/dev/scss/frontend/_container.scss
@@ -132,6 +132,11 @@
 		}
 	}
 
+	& > .e-container {
+		// Fix - Remove max width from nested container (ED-7719).
+		max-width: initial;
+	}
+
 	// Extracted from the inline CSS of `behaviors/sortable.js`.
 	.elementor-sortable-helper {
 		height: 84px;
