--- a/assets/dev/scss/frontend/widgets/spacer.scss
+++ b/assets/dev/scss/frontend/widgets/spacer.scss
@@ -4,11 +4,8 @@
 
 .elementor-column {
 
-	& > .elementor-widget-spacer {
-
-		& > .elementor-spacer-inner {
-			height: var( --spacer-size );
-		}
+	.elementor-spacer-inner {
+		height: var( --spacer-size );
 	}
 }
 
