--- a/assets/dev/scss/admin/_experiments.scss
+++ b/assets/dev/scss/admin/_experiments.scss
@@ -4,8 +4,10 @@
 	&__title {
 		display: flex;
 		align-items: flex-start;
+		flex-wrap: wrap;
 
 		&__indicator {
+			position: absolute;
 			height: 10px;
 			width: 10px;
 			border-radius: 50%;
@@ -20,7 +22,19 @@
 		}
 
 		&__label {
-			@include margin-start(10px);
+			@include margin-start(24px);
+		}
+
+		&__tag {
+			background: $wp-primary;
+			color: $white;
+			font-size: 0.8em;
+			padding: 3px 6px;
+			line-height: 1;
+			border-radius: 3px;
+			font-weight: 600;
+			margin-top: 5px;
+			@include margin-start(24px);
 		}
 	}
 
@@ -28,13 +42,8 @@
 		margin:30px 0;
 	}
 
-	&__description {
-		max-width: 820px;
-	}
-
 	&__status {
-		margin-top: 5px;
-		font-size: 13px;
+		font-size: 0.9em;
 		font-weight: bold;
 		font-style: italic;
 	}
@@ -58,6 +67,23 @@
 			color: $editor-dark;
 			font-weight: bold;
 			background: $editor-background-light;
+		}
+	}
+}
+
+#tab-experiments {
+
+	.form-table tr {
+		border-bottom: 1px solid #dcdcde;
+
+		&:last-child {
+			border-bottom: none;
+		}
+
+		.description {
+			font-size: 0.9em;
+			margin: 10px 0;
+			max-width: 820px;
 		}
 	}
 }
