--- a/assets/dev/scss/frontend/widgets/spacer.scss
+++ b/assets/dev/scss/frontend/widgets/spacer.scss
@@ -1,10 +1,28 @@
-.elementor-spacer-inner {
-	.e-container.e-container--row & {
-		width: var( --spacer-size );
-	}
+.elementor-column {
 
-	.elementor-column &,
-	.e-container.e-container--column & {
+	.elementor-spacer-inner {
 		height: var( --spacer-size );
+	}
+}
+
+.e-container {
+	--container-widget-width: 100%;
+
+	& > .elementor-widget-spacer {
+		width: var( --container-widget-width, var( --spacer-size ) );
+		align-self: stretch;
+		flex-shrink: 0;
+
+		& > .elementor-widget-container {
+			height: 100%;
+
+			& > .elementor-spacer {
+				height: 100%;
+
+				& > .elementor-spacer-inner {
+					height: var( --container-widget-height, var( --spacer-size ) );
+				}
+			}
+		}
 	}
 }
