set max width for widget inside container

--- a/assets/dev/scss/frontend/_global.scss
+++ b/assets/dev/scss/frontend/_global.scss
@@ -130,7 +130,7 @@
 		width: var( --widget-width, var( --widget-width-custom ) );
 	}
 
-	:is( .elementor-column > .elementor-widget-wrap ) {
+	:is( .elementor-column > .elementor-column-wrap > .elementor-widget-wrap ) {
 
 		& > .elementor-widget.elementor-widget {
 			max-width: var( --widget-width, var( --widget-width-custom ) );
