--- a/assets/dev/scss/frontend/_global.scss
+++ b/assets/dev/scss/frontend/_global.scss
@@ -126,14 +126,16 @@
 
 .elementor {
 
+	// Hack to preserve the original specificity for BC purposes.
 	.elementor-widget.elementor-widget {
 		width: var( --widget-width, var( --widget-width-custom ) );
 	}
 
 	:is( .elementor-column > .elementor-column-wrap > .elementor-widget-wrap ) {
 
+		// Hack to preserve the original specificity for BC purposes.
 		& > .elementor-widget.elementor-widget {
-			max-width: var( --widget-width, var( --widget-width-custom ) );
+			max-width: var( --widget-max-width, var( --widget-width-custom ) );
 		}
 	}
 
