--- a/assets/dev/scss/frontend/_global.scss
+++ b/assets/dev/scss/frontend/_global.scss
@@ -135,7 +135,7 @@
 
 		// Hack to preserve the original specificity for BC purposes.
 		& > .elementor-widget.elementor-widget {
-			max-width: var( --widget-max-width, var( --widget-width-custom ) );
+			max-width: var( --widget-width, var( --widget-width-custom ) );
 		}
 	}
 
