--- a/assets/dev/scss/frontend/_container.scss
+++ b/assets/dev/scss/frontend/_container.scss
@@ -30,7 +30,7 @@
 
 	--overlay-mix-blend-mode: initial;
 	--overlay-opacity: 1;
-	--overlay-transition: 0;
+	--overlay-transition: 0.3s;
 
 	position: var( --position );
 	display: var( --display );
