--- a/assets/dev/scss/frontend/_container.scss
+++ b/assets/dev/scss/frontend/_container.scss
@@ -90,6 +90,17 @@
 		pointer-events: none; // Prevent the placeholder from blocking the drop area.
 	}
 
+	&--width {
+
+		&-full {
+			--content-width: 100%;
+		}
+
+		&-boxed {
+			--width: 100%;
+		}
+	}
+
 	&.e-container--row {
 		& > .elementor-widget-placeholder {
 			position: relative;
