Internal: Experiment - Add the Loop Feature as an experiment [ED-7850]

--- a/assets/dev/scss/admin/_experiments.scss
+++ b/assets/dev/scss/admin/_experiments.scss
@@ -85,5 +85,10 @@
 			margin: 10px 0;
 			max-width: 820px;
 		}
+
+		&.elementor_experiment-loop {
+			display: none;
+			pointer-events: none;
+		}
 	}
 }
