--- a/assets/dev/scss/frontend/_container.scss
+++ b/assets/dev/scss/frontend/_container.scss
@@ -257,6 +257,7 @@
 		}
 	}
 
+	// Hack to increase specificity and avoid using `!important`.
 	.elementor .elementor-section-wrap & {
 
 		& > .elementor-widget {
