--- a/assets/dev/scss/frontend/_container.scss
+++ b/assets/dev/scss/frontend/_container.scss
@@ -260,6 +260,7 @@
 	// Hack to increase specificity and avoid using `!important`.
 	.elementor .elementor-section-wrap & {
 
+		// This was done to make sure that the widgets inside containers do not exceed the container's max width (ED-7723).
 		& > .elementor-widget {
 			max-width: 100%;
 		}
