Fix: Widget width is not working as expected In Container [ED-7723] (#19286)

--- a/assets/dev/scss/frontend/_container.scss
+++ b/assets/dev/scss/frontend/_container.scss
@@ -256,6 +256,15 @@
 			}
 		}
 	}
+
+	// Hack to increase specificity and avoid using `!important`.
+	.elementor .elementor-section-wrap & {
+
+		// This was done to make sure that the widgets inside containers do not exceed the container's max width.
+		& > .elementor-widget {
+			max-width: 100%;
+		}
+	}
 }
 
 @media ( max-width: $editor-screen-sm-max ) {
