Fix: Align notices to RTL sites - Core [ED-4809]

--- a/assets/dev/scss/admin/_notice.scss
+++ b/assets/dev/scss/admin/_notice.scss
@@ -102,7 +102,7 @@
 		display: block;
 		position: absolute;
 		top: 0;
-		right: 1px;
+		inset-inline-end: 1px;
 		border: none;
 		margin: 0;
 		padding: 9px;
