--- a/assets/dev/scss/frontend/_global.scss
+++ b/assets/dev/scss/frontend/_global.scss
@@ -182,20 +182,25 @@
 	--order: initial;
 	--align-self: initial;
 
-	// Flex container.
-	flex-direction: var( --flex-direction );
-	flex-wrap: var( --flex-wrap );
-	justify-content: var( --justify-content );
-	align-items: var( --align-items );
-	align-content: var( --align-content );
-	gap: var( --gap );
+	&, & > .e-container-boxed--inner {
+
+		// Flex container.
+		flex-direction: var( --flex-direction );
+		flex-wrap: var( --flex-wrap );
+		justify-content: var( --justify-content );
+		align-items: var( --align-items );
+		align-content: var( --align-content );
+		gap: var( --gap );
+
+		// Flex item.
+		flex-basis: var( --flex-basis );
+		flex-grow: var( --flex-grow );
+		flex-shrink: var( --flex-shrink );
+		align-self: var( --align-self );
+	}
 
 	// Flex item.
-	flex-basis: var( --flex-basis );
-	flex-grow: var( --flex-grow );
-	flex-shrink: var( --flex-shrink );
 	order: var( --order );
-	align-self: var( --align-self );
 }
 
 .elementor-invisible {
