--- a/assets/dev/scss/frontend/_container.scss
+++ b/assets/dev/scss/frontend/_container.scss
@@ -34,6 +34,13 @@
 	position: var( --position );
 	flex: var( --flex-grow ) var( --flex-shrink ) var( --flex-basis );
 	width: var( --width );
+	// Set `min-width` to fix nested Containers shrink bug (ED-4964).
+	// Ref: https://stackoverflow.com/questions/43934648/how-to-make-flexbox-items-shrink-correctly-when-in-a-nested-container
+	min-width: 0;
+	min-height: var( --min-height );
+	height: var( --height );
+	transition: var( --transition );
+	border-radius: var( --border-radius );
 	margin: var( --margin-top ) var( --margin-right ) var( --margin-bottom ) var( --margin-left );
 	padding-left: var( --padding-left );
 	padding-right: var( --padding-right );
@@ -42,18 +49,8 @@
 	z-index: var( --z-index );
 	overflow: var( --overflow );
 
-	&, &-boxed--inner {
+	&, & > .e-container-boxed--inner {
 		display: var( --display );
-		border-radius: var( --border-radius );
-		// Set `min-width` to fix nested Containers shrink bug (ED-4964).
-		// Ref: https://stackoverflow.com/questions/43934648/how-to-make-flexbox-items-shrink-correctly-when-in-a-nested-container
-		min-width: 0;
-		min-height: var( --min-height );
-		height: var( --height );
-		transition: var( --transition );
-	}
-
-	&--full, &-boxed--inner {
 		text-align: var( --text-align );
 		flex-direction: var( --flex-direction );
 	}
@@ -102,45 +99,59 @@
 	}
 
 	&.e-container--row {
-		& > .elementor-widget-placeholder {
-			position: relative;
-			z-index: $editor-layer; // To put it above the element overlay.
-			width: var( --size );
-			// To make sure that it doesn't push & break the layout when appearing.
-			margin-inline-start: var( --margin-start );
-			height: auto;
-			min-height: 100%;
-			animation-name: dnd-placeholder-widget-vertical;
-			animation-fill-mode: both;
+
+		&, & > .e-container-boxed--inner {
+
+			& > .elementor-widget-placeholder {
+				position: relative;
+				z-index: $editor-layer; // To put it above the element overlay.
+				width: var( --size );
+				// To make sure that it doesn't push & break the layout when appearing.
+				margin-inline-start: var( --margin-start );
+				height: auto;
+				min-height: 100%;
+				animation-name: dnd-placeholder-widget-vertical;
+				animation-fill-mode: both;
+			}
 		}
 
 		// Fix nested Containers DnD issues (ED-5424).
 		&[data-nesting-level]:not( [data-nesting-level = "0"] ) {
-			// Any placeholder which is not on first widget.
-			> .elementor-widget-placeholder {
-				margin-inline-end: 0;
-				margin-inline-start: calc( var( --margin-start ) + var( --margin-end ) );
-			}
 
-			// Placeholder on first widget.
-			> :not( .elementor-element ) + .elementor-widget-placeholder {
-				margin-inline-end: var( --margin-end );
-				margin-inline-start: var( --margin-start );
+			&, & > .e-container-boxed--inner {
+
+				// Any placeholder which is not on first widget.
+				> .elementor-widget-placeholder {
+					margin-inline-end: 0;
+					margin-inline-start: calc( var( --margin-start ) + var( --margin-end ) );
+				}
+	
+				// Placeholder on first widget.
+				> :not( .elementor-element ) + .elementor-widget-placeholder {
+					margin-inline-end: var( --margin-end );
+					margin-inline-start: var( --margin-start );
+				}
 			}
 		}
 	}
 
-	&.e-container--column > .elementor-widget-placeholder {
-		height: var( --size );
-		// To make sure that it doesn't push & break the layout when appearing.
-		margin-block-start: var( --margin-start );
-		margin-block-end: var( --margin-end );
-		animation-name: dnd-placeholder-widget-horizontal;
+	&.e-container--column {
 
-		// Hack to fix placeholder placement in Chrome when it's last (ED-5486).
-		&:nth-last-child( 2 ) {
-			margin-block-start: calc( 2 * var( --margin-start ) );
-			--margin-end: 0;
+		&, & > .e-container-boxed--inner {
+
+			> .elementor-widget-placeholder {
+				height: var( --size );
+				// To make sure that it doesn't push & break the layout when appearing.
+				margin-block-start: var( --margin-start );
+				margin-block-end: var( --margin-end );
+				animation-name: dnd-placeholder-widget-horizontal;
+		
+				// Hack to fix placeholder placement in Chrome when it's last (ED-5486).
+				&:nth-last-child( 2 ) {
+					margin-block-start: calc( 2 * var( --margin-start ) );
+					--margin-end: 0;
+				}
+			}
 		}
 	}
 
@@ -200,11 +211,14 @@
 		}
 	}
 
-	& > .elementor-widget {
+	&, & > .e-container-boxed--inner {
 
-		& > .elementor-widget-container {
-			// Fix align-self:stretch (ED-7359)
-			height: 100%;
+		& > .elementor-widget {
+
+			& > .elementor-widget-container {
+				// Fix align-self:stretch (ED-7359)
+				height: 100%;
+			}
 		}
 	}
 
@@ -271,9 +285,12 @@
 	// Hack to increase specificity and avoid using `!important`.
 	.elementor .elementor-section-wrap & {
 
-		// This was done to make sure that the widgets inside containers do not exceed the container's max width.
-		& > .elementor-widget {
-			max-width: 100%;
+		&, & > .e-container-boxed--inner {
+
+			// This was done to make sure that the widgets inside containers do not exceed the container's max width.
+			& > .elementor-widget {
+				max-width: 100%;
+			}
 		}
 	}
 }
